// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createPlaygroundLayer > bare minimum 1`] = `
{
  "files": {
    "src/routes/+page.svelte": "<script lang="ts">
  import { createForm, BasicForm, type Schema, type UiSchemaRoot } from "@sjsf/form";
  import * as defaults from "$lib/form-defaults";

  const schema = {
  "type": "object",
  "properties": {
    "name": {
      "type": "string"
    }
  }
} as const satisfies Schema;
  const uiSchema = {} as UiSchemaRoot;

  const form = createForm({
    ...defaults,
    schema,
    uiSchema,
    disabled: false,
    onSubmit: console.log,
  });
</script>

<BasicForm {form} />",
  },
  "package": {
    "dependencies": [],
    "name": "playground",
  },
}
`;

exports[`createPlaygroundLayer > with custom merger options 1`] = `
{
  "files": {
    "src/routes/+page.svelte": "<script lang="ts">
  import { createForm, BasicForm, type Schema, type UiSchemaRoot } from "@sjsf/form";
  import * as defaults from "$lib/form-defaults";
  import { createFormMerger } from "@sjsf/form/mergers/modern";

  const schema = {
  "type": "object",
  "properties": {
    "name": {
      "type": "string"
    }
  }
} as const satisfies Schema;
  const uiSchema = {} as UiSchemaRoot;

  const form = createForm({
    ...defaults,
    schema,
    uiSchema,
    disabled: false,
    merger: (options) => createFormMerger({
      ...options,
      allOf: "populateDefaults",
      arrayMinItems: { populate: "all", mergeExtraDefaults: false },
      constAsDefaults: "always",
      emptyObjectFields: "populateAllDefaults",
      mergeDefaultsIntoFormData: "useFormDataIfPresent",
    }),
    onSubmit: console.log,
  });
</script>

<BasicForm {form} />",
  },
  "package": {
    "dependencies": [],
    "name": "playground",
  },
}
`;

exports[`createPlaygroundLayer > with everything enabled 1`] = `
{
  "files": {
    "src/lib/custom-components/index.ts": "export { default as markdownDescription } from "./markdown-description.svelte";
export { default as transparentLayout } from "./transparent-layout.svelte";
",
    "src/lib/custom-components/markdown-description.svelte": "<script lang="ts">
  import Markdown from "svelte-exmarkdown";
  import {
    descriptionAttributes,
    getFormContext,
    type ComponentProps,
  } from "@sjsf/form";

  const { config, description }: ComponentProps["description"] = $props();

  const ctx = getFormContext();
</script>

<Markdown md={description}>
  {#snippet p({ children })}
    <div {...descriptionAttributes(ctx, config, "descriptionAttributes", {})}>
      {@render children?.()}
    </div>
  {/snippet}
</Markdown>
",
    "src/lib/custom-components/transparent-layout.svelte": "<script lang="ts">
  import {
    getComponent,
    getFormContext,
    type ComponentProps,
  } from "@sjsf/form";

  const props: ComponentProps["layout"] = $props();

  const ctx = getFormContext();
</script>

{#if props.type === "multi-field-controls"}
  {@const Layout = getComponent(ctx, "layout", {
    ...props.config,
    uiSchema: {
      ...props.config.uiSchema,
      "ui:components": undefined,
    },
  })}
  <Layout {...props} />
{:else}
  {@render props.children()}
{/if}
",
    "src/routes/+page.svelte": "<script lang="ts" module>
  import type { ComponentProps } from "@sjsf/form";
  import type { EnumValueMapperBuilder } from "@sjsf/form/options.svelte";
  declare module "@sjsf/form" {
    interface ComponentProps {
      markdownDescription: ComponentProps["description"];
      transparentLayout: ComponentProps["layout"];
    }
    interface ComponentBindings {
      markdownDescription: "";
      transparentLayout: "";
    }
    interface UiOptionsRegistry {
      stringEnumValueMapper: () => EnumValueMapperBuilder;
    }
  }
</script>

<script lang="ts">
  import { createForm, BasicForm, type Schema, type UiSchemaRoot } from "@sjsf/form";
  import * as defaults from "$lib/form-defaults";
  import { extendByRecord } from "@sjsf/form/lib/resolver";
  import { markdownDescription, transparentLayout } from "$lib/custom-components";
  import { StringEnumValueMapperBuilder } from "@sjsf/form/options.svelte";
  import { createFormMerger } from "@sjsf/form/mergers/modern";
  import { createFocusOnFirstError } from "@sjsf/form/focus-on-first-error";
  import { omitExtraData } from "@sjsf/form/omit-extra-data";
  import { ON_INPUT, ON_CHANGE, ON_BLUR } from "@sjsf/form";

  const schema = {
  "type": "object",
  "properties": {
    "name": {
      "type": "string"
    }
  }
} as const satisfies Schema;
  const uiSchema = {
  "ui:components": {
    "layout": "transparentLayout",
    "description": "markdownDescription"
  },
  "ui:options": {
    "enumValueMapperBuilder": "registry:stringEnumValueMapper"
  }
} as UiSchemaRoot;

  const form = createForm({
    ...defaults,
    schema,
    uiSchema,
    disabled: false,
    fieldsValidationMode: ON_INPUT | ON_CHANGE | ON_BLUR,
    theme: extendByRecord(defaults.theme, {markdownDescription, transparentLayout}),
    merger: (options) => createFormMerger({
      ...options,
      allOf: "populateDefaults",
      arrayMinItems: { populate: "all", mergeExtraDefaults: false },
      constAsDefaults: "always",
      emptyObjectFields: "populateAllDefaults",
      mergeDefaultsIntoFormData: "useFormDataIfPresent",
    }),
    validator: (options) => {
      const v = defaults.validator(options);
      return {
        ...v,
        validateFormValue(rootSchema, formValue) {
          return v.validateFormValue(rootSchema, omitExtraData(v, options.merger(), options.schema, formValue));
        },
      };
    },
    onSubmit: console.log,
    onSubmitError: createFocusOnFirstError(),
    uiOptionsRegistry: {
      stringEnumValueMapper: () => new StringEnumValueMapperBuilder(),
    },
  });
</script>

<BasicForm {form} novalidate />",
  },
  "package": {
    "dependencies": [
      {
        "dev": false,
        "name": "svelte-exmarkdown",
        "version": "5.0.2",
      },
    ],
    "name": "playground",
  },
}
`;

exports[`createPlaygroundLayer > with fields validation mode 1`] = `
{
  "files": {
    "src/routes/+page.svelte": "<script lang="ts">
  import { createForm, BasicForm, type Schema, type UiSchemaRoot } from "@sjsf/form";
  import * as defaults from "$lib/form-defaults";
  import { ON_INPUT, ON_CHANGE } from "@sjsf/form";

  const schema = {
  "type": "object",
  "properties": {
    "name": {
      "type": "string"
    }
  }
} as const satisfies Schema;
  const uiSchema = {} as UiSchemaRoot;

  const form = createForm({
    ...defaults,
    schema,
    uiSchema,
    disabled: false,
    fieldsValidationMode: ON_INPUT | ON_CHANGE,
    onSubmit: console.log,
  });
</script>

<BasicForm {form} />",
  },
  "package": {
    "dependencies": [],
    "name": "playground",
  },
}
`;

exports[`createPlaygroundLayer > with focus on first error 1`] = `
{
  "files": {
    "src/routes/+page.svelte": "<script lang="ts">
  import { createForm, BasicForm, type Schema, type UiSchemaRoot } from "@sjsf/form";
  import * as defaults from "$lib/form-defaults";
  import { createFocusOnFirstError } from "@sjsf/form/focus-on-first-error";

  const schema = {
  "type": "object",
  "properties": {
    "name": {
      "type": "string"
    }
  }
} as const satisfies Schema;
  const uiSchema = {} as UiSchemaRoot;

  const form = createForm({
    ...defaults,
    schema,
    uiSchema,
    disabled: false,
    onSubmit: console.log,
    onSubmitError: createFocusOnFirstError(),
  });
</script>

<BasicForm {form} />",
  },
  "package": {
    "dependencies": [],
    "name": "playground",
  },
}
`;

exports[`createPlaygroundLayer > with html5 validation off 1`] = `
{
  "files": {
    "src/routes/+page.svelte": "<script lang="ts">
  import { createForm, BasicForm, type Schema, type UiSchemaRoot } from "@sjsf/form";
  import * as defaults from "$lib/form-defaults";

  const schema = {
  "type": "object",
  "properties": {
    "name": {
      "type": "string"
    }
  }
} as const satisfies Schema;
  const uiSchema = {} as UiSchemaRoot;

  const form = createForm({
    ...defaults,
    schema,
    uiSchema,
    disabled: false,
    onSubmit: console.log,
  });
</script>

<BasicForm {form} novalidate />",
  },
  "package": {
    "dependencies": [],
    "name": "playground",
  },
}
`;

exports[`createPlaygroundLayer > with markdownDescription component 1`] = `
{
  "files": {
    "src/lib/custom-components/index.ts": "export { default as markdownDescription } from "./markdown-description.svelte";
",
    "src/lib/custom-components/markdown-description.svelte": "<script lang="ts">
  import Markdown from "svelte-exmarkdown";
  import {
    descriptionAttributes,
    getFormContext,
    type ComponentProps,
  } from "@sjsf/form";

  const { config, description }: ComponentProps["description"] = $props();

  const ctx = getFormContext();
</script>

<Markdown md={description}>
  {#snippet p({ children })}
    <div {...descriptionAttributes(ctx, config, "descriptionAttributes", {})}>
      {@render children?.()}
    </div>
  {/snippet}
</Markdown>
",
    "src/routes/+page.svelte": "<script lang="ts" module>
  import type { ComponentProps } from "@sjsf/form";
  declare module "@sjsf/form" {
    interface ComponentProps {
      markdownDescription: ComponentProps["description"];
    }
    interface ComponentBindings {
      markdownDescription: "";
    }
  }
</script>

<script lang="ts">
  import { createForm, BasicForm, type Schema, type UiSchemaRoot } from "@sjsf/form";
  import * as defaults from "$lib/form-defaults";
  import { extendByRecord } from "@sjsf/form/lib/resolver";
  import { markdownDescription, transparentLayout } from "$lib/custom-components";

  const schema = {
  "type": "object",
  "properties": {
    "name": {
      "type": "string"
    }
  }
} as const satisfies Schema;
  const uiSchema = {
  "ui:components": {
    "description": "markdownDescription"
  }
} as UiSchemaRoot;

  const form = createForm({
    ...defaults,
    schema,
    uiSchema,
    disabled: false,
    theme: extendByRecord(defaults.theme, {markdownDescription}),
    onSubmit: console.log,
  });
</script>

<BasicForm {form} />",
  },
  "package": {
    "dependencies": [
      {
        "dev": false,
        "name": "svelte-exmarkdown",
        "version": "5.0.2",
      },
    ],
    "name": "playground",
  },
}
`;

exports[`createPlaygroundLayer > with omit extra data 1`] = `
{
  "files": {
    "src/routes/+page.svelte": "<script lang="ts">
  import { createForm, BasicForm, type Schema, type UiSchemaRoot } from "@sjsf/form";
  import * as defaults from "$lib/form-defaults";
  import { omitExtraData } from "@sjsf/form/omit-extra-data";

  const schema = {
  "type": "object",
  "properties": {
    "name": {
      "type": "string"
    }
  }
} as const satisfies Schema;
  const uiSchema = {} as UiSchemaRoot;

  const form = createForm({
    ...defaults,
    schema,
    uiSchema,
    disabled: false,
    validator: (options) => {
      const v = defaults.validator(options);
      return {
        ...v,
        validateFormValue(rootSchema, formValue) {
          return v.validateFormValue(rootSchema, omitExtraData(v, options.merger(), options.schema, formValue));
        },
      };
    },
    onSubmit: console.log,
  });
</script>

<BasicForm {form} />",
  },
  "package": {
    "dependencies": [],
    "name": "playground",
  },
}
`;

exports[`createPlaygroundLayer > with string enum value mapper 1`] = `
{
  "files": {
    "src/routes/+page.svelte": "<script lang="ts" module>
  import type { EnumValueMapperBuilder } from "@sjsf/form/options.svelte";
  declare module "@sjsf/form" {
    interface UiOptionsRegistry {
      stringEnumValueMapper: () => EnumValueMapperBuilder;
    }
  }
</script>

<script lang="ts">
  import { createForm, BasicForm, type Schema, type UiSchemaRoot } from "@sjsf/form";
  import * as defaults from "$lib/form-defaults";
  import { StringEnumValueMapperBuilder } from "@sjsf/form/options.svelte";

  const schema = {
  "type": "object",
  "properties": {
    "name": {
      "type": "string"
    }
  }
} as const satisfies Schema;
  const uiSchema = {
  "ui:options": {
    "enumValueMapperBuilder": "registry:stringEnumValueMapper"
  }
} as UiSchemaRoot;

  const form = createForm({
    ...defaults,
    schema,
    uiSchema,
    disabled: false,
    onSubmit: console.log,
    uiOptionsRegistry: {
      stringEnumValueMapper: () => new StringEnumValueMapperBuilder(),
    },
  });
</script>

<BasicForm {form} />",
  },
  "package": {
    "dependencies": [],
    "name": "playground",
  },
}
`;

exports[`createPlaygroundLayer > with transparentLayout component 1`] = `
{
  "files": {
    "src/lib/custom-components/index.ts": "export { default as transparentLayout } from "./transparent-layout.svelte";
",
    "src/lib/custom-components/transparent-layout.svelte": "<script lang="ts">
  import {
    getComponent,
    getFormContext,
    type ComponentProps,
  } from "@sjsf/form";

  const props: ComponentProps["layout"] = $props();

  const ctx = getFormContext();
</script>

{#if props.type === "multi-field-controls"}
  {@const Layout = getComponent(ctx, "layout", {
    ...props.config,
    uiSchema: {
      ...props.config.uiSchema,
      "ui:components": undefined,
    },
  })}
  <Layout {...props} />
{:else}
  {@render props.children()}
{/if}
",
    "src/routes/+page.svelte": "<script lang="ts" module>
  import type { ComponentProps } from "@sjsf/form";
  declare module "@sjsf/form" {
    interface ComponentProps {
      transparentLayout: ComponentProps["layout"];
    }
    interface ComponentBindings {
      transparentLayout: "";
    }
  }
</script>

<script lang="ts">
  import { createForm, BasicForm, type Schema, type UiSchemaRoot } from "@sjsf/form";
  import * as defaults from "$lib/form-defaults";
  import { extendByRecord } from "@sjsf/form/lib/resolver";
  import { markdownDescription, transparentLayout } from "$lib/custom-components";

  const schema = {
  "type": "object",
  "properties": {
    "name": {
      "type": "string"
    }
  }
} as const satisfies Schema;
  const uiSchema = {
  "ui:components": {
    "layout": "transparentLayout"
  }
} as UiSchemaRoot;

  const form = createForm({
    ...defaults,
    schema,
    uiSchema,
    disabled: false,
    theme: extendByRecord(defaults.theme, {transparentLayout}),
    onSubmit: console.log,
  });
</script>

<BasicForm {form} />",
  },
  "package": {
    "dependencies": [],
    "name": "playground",
  },
}
`;
